# WaveBench

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  WORKFLOW.md  package-lock.json  pyproject.toml  run_benchmarks.sh
.agents/skills/interactive-verification/: SKILL.md
.agents/skills/interactive-verification/scripts/: post-linear-file.py
.agents/skills/write-linear/: SKILL.md
.agents/skills/write-linear/scripts/: post-comment.py
.github/scripts/: sync_linear_issue_project.py
.github/workflows/: sync-linear-project.yml
.superpowers/brainstorm/41368-1776389022/content/: layer-count.html  layer-darkness.html  layer-positioning.html  phase-coupling.html
.superpowers/brainstorm/41368-1776389022/state/: server-stopped
docs/: CONTRIBUTING.md  architecture.md  symphony.md
docs/superpowers/plans/: 2026-04-11-model-attribution.md
docs/superpowers/specs/: 2026-04-11-model-attribution-design.md  2026-04-22-maintainability-foundation-design.md
instance/: trading.db
llm_benchmarks/: __main__.py  api.py  core.py  models.py  parsers.py  storage.py
llm_benchmarks/tui/: components.py  interactive.py  styles.py
scripts/: effort_audit.py  effort_audit_tight.py  effort_audit_tight_results.json
symphony/: __init__.py  __main__.py  agent.py  config.py  errors.py  linear.py  models.py  orchestrator.py  workflow.py  workspace.py
tests/: conftest.py
tests/characterization/: test_core_contract.py  test_menus_contract.py  test_progress_contract.py
tests/integration/: test_api_streaming.py  test_directory_naming_live.py
tests/unit/: test_main_cli_tts.py  test_main_query_history.py  test_models_scoring.py  test_modes.py  test_orchestrator_image.py  test_orchestrator_tts.py  test_parsers.py  test_public_api.py  test_runner_image.py  test_runner_tts.py  test_storage.py  test_symphony_linear.py  test_symphony_orchestrator.py  test_symphony_pi.py  test_symphony_workflow.py  test_symphony_workspace.py  test_tts_player.py
wavebench/: __init__.py  __main__.py  api.py  core.py  models.py  parsers.py  storage.py
wavebench/core/: __init__.py  auto_install.py  auto_open.py  orchestrator.py  runner.py
wavebench/modes/: __init__.py  code.py  image.py  text.py  tts.py
wavebench/tui/: __init__.py  components.py  input.py  interactive.py  line_editor.py  styles.py  tts_player.py
wavebench/tui/analytics/: __init__.py  cost.py  table.py
wavebench/tui/menus/: __init__.py  _shared.py  config_menu.py  model_list.py
wavebench/tui/progress/: __init__.py  tracker.py  wave.py
