[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavebench"
version = "0.1.0"
description = "Benchmarks LLMs via the OpenRouter API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
]

[project.scripts]
wavebench = "wavebench.__main__:main"

[tool.setuptools.packages.find]
include = ["wavebench*"]
